# oiio-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs
coiio/: CMakeLists.txt  coiio.cpp  coiio.h  test.cpp
src/: ffi.rs  imagebuf.rs  imagebufalgo.rs  imageio.rs  lib.rs  typedesc.rs
